[gd_scene load_steps=6 format=3 uid="uid://ctynya84kr8qn"]

[ext_resource type="Texture2D" uid="uid://0ybyr35xdesj" path="res://IMG_0019.JPG" id="1_wu5um"]
[ext_resource type="Script" path="res://Windows/Test/ImageScalingTest.gd" id="1_yt1mr"]
[ext_resource type="Script" path="res://Windows/Test/TextureRect.gd" id="2_h8soe"]
[ext_resource type="Script" path="res://Windows/Test/HBoxContainer.gd" id="4_d0h4m"]
[ext_resource type="Script" path="res://Windows/Test/Container.gd" id="5_0l6gc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yt1mr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 36.0
offset_right = 930.0
offset_bottom = 443.0
texture = ExtResource("1_wu5um")
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_h8soe")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 560.0
offset_right = 206.0
offset_bottom = 596.0
text = "Image change demo (click me and select an image)"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 443.0
offset_right = 1052.0
offset_bottom = 643.0
theme_override_constants/separation = 8
alignment = 1
script = ExtResource("4_d0h4m")

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "I'm a text That works ok"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "I'm button 2"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "I'm button 3"

[node name="Container" type="Container" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_0l6gc")

[node name="Button" type="Button" parent="Container"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="Container"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="Container"]
layout_mode = 2
text = "3"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(392, 200)
min_size = Vector2i(200, 200)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SadLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 84.0
offset_right = 529.0
offset_bottom = 340.0
text = "I'm a sad label for your error checking needs."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
